--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,7 @@ theme: minima
 remote_theme: jekyll/minima
 plugins:
   - jekyll-remote-theme
+  - jekyll-feed
+  - jekyll-seo-tag
 minima:
   skin: dark
