--- a/_config.yml
+++ b/_config.yml
@@ -7,3 +7,10 @@ plugins:
   - jekyll-feed
   - jekyll-seo-tag
   - jekyll-redirect-from
+header_pages:
+  - index.md
+  - projects.md
+
+external_links:
+  - title: "Ordinary Engineering"
+    url: "https://ordinaryengineering.com/"
